<resources>
    <string name="app_name">Football League</string>
    <string name="no_image">No Image</string>
    <string name="prev">Pertandingan Terakhir</string>
    <string name="next">Pertandingan Mendatang</string>
    <string-array name="club_name">
        <item>Australian A League</item>
        <item>American Mayor League</item>
        <item>English League 1</item>
        <item>English Premier League</item>
        <item>French Ligue 1</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>Protugeuese Premiera Liga</item>
        <item>Scotish Premier League</item>
        <item>Spanish La Liga</item>
    </string-array>
    <string name="back_arrow">back arrow</string>
    <string name="search">Search</string>
    <string name="close_button">close button</string>
    <string name="no_result">No result</string>
    <string name="no_result_desc">Try input more general keyword</string>
</resources>