<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey_10"
    tools:context=".view.SearchActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/card_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <View
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                android:layout_margin="@dimen/spacing_middle" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_middle"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="2dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/bt_back"
                        android:layout_width="?attr/actionBarSize"
                        android:layout_height="?attr/actionBarSize"
                        android:background="@android:color/transparent"
                        android:tint="@color/grey_60"
                        app:srcCompat="@drawable/ic_arrow_back"
                        tools:ignore="VectorDrawableCompat"
                        android:contentDescription="@string/back_arrow" />

                    <EditText
                        android:id="@+id/et_search"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:hint="@string/search"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:autofillHints="yes"
                        android:inputType="text">
                        <requestFocus />

                    </EditText>

                    <ImageButton
                        android:id="@+id/bt_search"
                        android:layout_width="?attr/actionBarSize"
                        android:layout_height="?attr/actionBarSize"
                        android:background="@android:color/transparent"
                        android:clickable="true"
                        android:tint="@color/grey_60"
                        app:srcCompat="@drawable/ic_search"
                        tools:ignore="VectorDrawableCompat"
                        android:focusable="true"
                        android:contentDescription="@string/close_button" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lyt_suggestion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey_10" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </RelativeLayout>

    <RelativeLayout
        android:background="@color/colorGreenBg"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/match_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cacheColorHint="#0000"
            android:scrollbars="none"
            android:scrollingCache="true" />

        <LinearLayout
            android:id="@+id/lyt_no_result"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:visibility="gone"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_result"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                android:textColor="@color/grey_40"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/no_result_desc"
                android:gravity="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/grey_40" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>